# sure-mcp-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml
docs/: PROJECT_MAP.md
docs/plans/: 2026-03-08-oauth-dual-auth-design.md  2026-03-08-oauth-dual-auth.md  2026-03-08-per-user-api-key-design.md  2026-03-08-per-user-api-key.md
docs/superpowers/plans/: 2026-03-10-create-update-category.md  2026-03-11-delete-category.md
docs/superpowers/specs/: 2026-03-10-create-update-category-design.md  2026-03-11-delete-category-design.md  2026-03-11-get-category-icons-design.md
src/sure_mcp_server/: __init__.py  auth_db.py  oauth_routes.py  server.py
tests/: test_auth_db.py  test_middleware.py  test_oauth_routes.py  test_tools_account.py  test_tools_category.py
